# -AI-

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260618_0001_initial_schema.py
app/: __init__.py  bootstrap.py  main.py
app/api/: dependencies.py
app/api/routes/: assistant_routes.py  inventory_routes.py  profit_routes.py  quote_routes.py  tracking_routes.py
app/api/schemas/: __init__.py  requests.py  responses.py
app/application/: __init__.py
app/application/use_cases/: __init__.py  ask_assistant.py  calculate_profit.py  predict_inventory.py  recommend_shipping.py  update_tracking_status.py
app/config/: __init__.py  settings.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  assistant.py  inventory.py  ml.py  order.py  profit.py  quote.py  recommendation.py  route_option.py  tracking.py
app/domain/policies/: __init__.py  anomaly_policy.py  profit_policy.py
app/domain/ports/: __init__.py  carrier_gateway.py  llm_gateway.py  ml_predictor.py  repositories.py  route_optimizer.py
app/domain/value_objects/: __init__.py  address.py  money.py  package.py  risk_score.py
app/infrastructure/: __init__.py
app/infrastructure/carriers/: __init__.py  external_carriers.py  mock_carrier.py  real_carrier.py
app/infrastructure/db/: __init__.py  models.py  repositories.py  session.py
scripts/: check_code_constraints.py
tests/: test_api.py  test_bootstrap_modes.py  test_profit_policy.py  test_real_carrier.py  test_recommend_shipping.py  test_task_status.py
(+14 files in other folders)
